# scaffoldpy

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .pytest.ini  README.md  create-py-project.code-workspace  cspell.json  pyproject.toml  pyrightconfig.json  ruff.toml  scaffoldpy.code-workspace
.github/workflows/: ci.yml  release.yml
.trunk/: trunk.yaml
src/cpp/: cli.py
src/create_py_project/: builders.py  cli.py  config_create_py_project.json5  consts.py  models.py  schema_create_py_project.json
src/scaffoldpy/: __version__.py  _dump_config.py  builders.py  cli.py  config.py  configs.py  gen_config.py  models.py  plugins.py  templates.py  utils.py
src/scaffoldpy/_config/: config_scaffoldpy.json5  scaffoldpy.code-workspace  schema_scaffoldpy.json
src/ujson5/: __init__.py
tests/: test_cli.py
