[build-system]
requires = ['hatchling', "hatch-vcs"]
build-backend = 'hatchling.build'


[project]
name = "create-py-project"
description = "A cli tool to create a Python project with best practices"
authors = [{ name = "Austin Yu", email = "yuxm.austin1023@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "inquirerpy>=0.3.4",
]
classifiers = []
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/austinyu/create-py-project'
# Documentation = 'https://austinyu.github.io/ujson5/'
Source = 'https://github.com/austinyu/create-py-project'
# Changelog = TBD

[project.scripts]
"create-py-project" = "create_py_project.cli:main"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "pytest-codspeed",
    "pytest-test-groups",
]

linters = [
    "pylint",
    "flake8",
    "flake8-simplify",
    "flake8-mutable",
    "flake8-print",
    "flake8-use-fstring",
    "flake8-builtins",
    "flake8-functions-names",
    "flake8-variables-names",
    "flake8-no-implicit-concat",
    "mypy",
    "ruff",
    "isort",
]

formatter = [
    "ruff",
    "isort",
]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "pymdown-extensions",
]

all = [
    { include-group = "test" },
    { include-group = "linters" },
    { include-group = "docs" },
]

[tool.uv]
default-groups = ['all']

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/CHANGELOG.md',
    '/src',
    '/tests',
]

[tool.hatch.build.targets.wheel]
packages = ["src/cpp"]

[tool.pytest.ini_options]
addopts = """
    --cov .
    --cov-report xml:tests/.coverage/cov.xml
    --cov-report html:tests/.coverage/html
"""

[tool.coverage.report]
exclude_also = ['pytest.skip']
